prerequis modif
