# src/main/java/com/example/todoapp/business/model/Task.java
@@ -1,0 +1,4 @@
+package com.example.todoapp.business.model;
+
+public record Task(Integer id, String title, String description, boolean done) {
+}
